--- a/promact.html
+++ b/promact.html
@@ -122,18 +122,16 @@ alert('Full Name:'+document.getElementById("fullName").value +"\n"+ 'Email Id :'
                     
                     <div class="col-sm-5 social-wrap">
                         <h4>Social</h4>
-                        <div class="about-social animated flipInY" >
-
-                        <a href="https://www.facebook.com" class="social-box " >
-                            <i class="fa fa-facebook"></i></a>
-                        <a href="https://twitter.com" class="social-box" >
-                            <i class="fa fa-twitter"></i></a>
-                        <a href="https://plus.google.com" class="social-box ">
-                            <i class="fa fa-google-plus pr-1"></i></a>
-                       <a href="https://linkedin.com" class="social-box " >
-                            <i class="fa fa-linkedin"></i></a>
-
-                   </div> 
+                        <div class="about-social" >
+                            <a href="https://www.facebook.com" class="social-box " >
+                                <i class="fa fa-facebook"></i></a>
+                            <a href="https://twitter.com" class="social-box" >
+                                <i class="fa fa-twitter"></i></a>
+                            <a href="https://plus.google.com" class="social-box ">
+                                <i class="fa fa-google-plus pr-1"></i></a>
+                           <a href="https://linkedin.com" class="social-box " >
+                                <i class="fa fa-linkedin"></i></a>
+                        </div> 
                     </div>
                     
                     <div class="col-sm-3">
