--- a/promact.html
+++ b/promact.html
@@ -34,10 +34,9 @@ alert('Full Name:'+document.getElementById("fullName").value +"\n"+ 'Email Id :'
   </head>
 <body>
 
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark py-0 fixed-top">
       <div class ="container">
-
-        <div class="navbar-brand" >
+        <div class="navbar-brand py-0" >
             <div class="brand-logo">
                 <a href="#" class="logo"></a>
             </div>
@@ -47,13 +46,13 @@ alert('Full Name:'+document.getElementById("fullName").value +"\n"+ 'Email Id :'
         </button>
         <div class="collapse navbar-collapse" id="navbarNav"> 
             <ul class="nav navbar-nav  ml-auto ">
-                <li class="nav-item" >
+                <li class="nav-item py-0" >
                     <a class="nav-link" href="#home">Home</a>
                 </li>
-                 <li class="nav-item">
+                 <li class="nav-item py-0">
                   <a class="nav-link" href="#touch">Get In Touch</a>
                 </li>
-                 <li class="nav-item">
+                 <li class="nav-item py-0">
                   <a class="nav-link" href="#about">About</a>
                 </li>
             </ul>
@@ -68,7 +67,6 @@ alert('Full Name:'+document.getElementById("fullName").value +"\n"+ 'Email Id :'
             <p class="text-bold">Promact: Startup IT Services Specialist</p>
             <p> We have a unique expertise in dealing with startups and managing stacks.</p>
           </div>
-
             <div class="down-arrow animated bounce infinite">
                 <a href="#touch" class="top-to-down  animated bounce infinite">
                     <i class="fa fa-chevron-down"></i>
@@ -136,22 +134,21 @@ alert('Full Name:'+document.getElementById("fullName").value +"\n"+ 'Email Id :'
                     <div class="col-sm-3">
                     <h4>Contact us</h4>
                     <ul class="list-unstyled">
-                    <li>
-                        info@promactinfo.com
-                    </li>
-                    <li>                    
-                        B-301, Monalisa Business Center, Near More Mega Store, Manjalpur, Vadodara, Gujarat,
-                        India -
-                        390011
-                    </li>
-                    <li>                    
-                        +91 - 992-503-6216
-                    </li>
+                    
+                        <li>                    
+                            Promact infotech Pvt.Ltd.
+                            Manjalpur, Vadodara
+                            India -
+                            390011
+                        </li>   
+                        <li>
+                            info@promactinfo.com
+                        </li>
                     </ul>
                     </div>
                 </div>
             </div>
-            <div class="copyright">Copyright ©2018 Promact Infotech Pvt. Ltd. All Rights Reserved.</div>       
+            <div class="copyright">Copyright ©2016 Promact Infotech Pvt. Ltd. All Rights Reserved.</div>       
     </section>
 
 </body>
